Enhancing Your Course Home Page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="witdth=device-width,initial-scale=1.0">
         <title>Terry Bello | WDD 130</title>
+        <!-- New meta tags -->
+        <meta name="description" content="Explore the life and achievements of Terry Bello. From professional accomplishments to personal challenges, delve into Terry's journey, roles, and goals. Get insights into his skills, passions, and service to the community and church.">
+        <meta name="author" content="Terry Bello">
+        <!-- End of new meta tags -->
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>
@@ -17,6 +22,15 @@
             <h1>Terry Bello | WDD 130</h1>
             <img src="images/profile.jpg" alt="Helo, my name is Terry Bello" width="200">
             <p>Hello! My name is Terry Bello and I am from Venezuela, but I lived in Ecuador for 7 years and now I have lived for two years in São Paulo Brazil. I am 39 years old, and I am a logistics and supply administrator. And now I want to change careers and develop myself in the world of technology.</p>
+            <aside>
+                <h2>Sao Paulo</h2>
+                <img src="images/Brazil.jpg" alt="São Paulo State">
+                <p>
+                    São Paulo is one of the 27 federative units in Brazil, situated in the Southeast Region. Boasting a population of 44 million, accounting for approximately 22% of the Brazilian population, it stands as the most populous state in Brazil and the most densely populated national subdivision across the American continent. São Paulo surpasses all other countries in South America in terms of inhabitants, except for Colombia. The population of São Paulo is renowned for its remarkable diversity.
+                    
+                    The economic landscape of São Paulo is characterized by its robustness and diversity, hosting the largest industrial, scientific, and technological production in the country.
+                </p>
+            </aside>
         </main>
         <footer>
             <p>©️2024 🪇 Terry Bello 🪇 São Paulo, Brazil</p>
