Add changes in my bio

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <main>
             <h1>Terry Bello | WDD 130</h1>
             <img src="images/profile.jpg" alt="Helo, my name is Terry Bello" width="200">
-            <p>Hello! My name is Terry Bello and I am from Venezuela, but I lived in Ecuador for 7 years and now I have lived for two years in São Paulo Brazil. I am 39 years old, and I am a logistics and supply administrator. And now I want to change careers and develop myself in the world of technology.</p>
+            <p>Hello! My name is Terry Bello and I am from Venezuela, but I lived in Ecuador for 7 years and now I have lived for two years in São Paulo Brazil. I am 39 years old, and I am a logistics and supply administrator. And now I want to change careers and develop myself in the world of technology 😎.</p>
             <aside>
                 <h2>Sao Paulo</h2>
                 <img src="images/Brazil.jpg" alt="São Paulo State">
