--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -59,7 +59,7 @@
         <img src="https://byui-cse.github.oi/wdd130-ww-course/images/wwr-wireframe-abouus-update.png" alt="About Us Page Wireframe Design" width="700">
     </main>
     <footer>
-        <p>©️2024 🪇 Rafting Site Document🪇 Terry Bello 🪇 WDD 130</p> 
+        <p>©️2024 🪇 Rafting Site Document 😎 Terry Bello 🪇 WDD 130</p> 
     </footer>
 </body>
 </html>
