New improvements to the presentation page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="witdth=device-width,initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Terry Bello | WDD 130</title>
         <!-- New meta tags -->
         <meta name="description" content="Explore the life and achievements of Terry Bello. From professional accomplishments to personal challenges, delve into Terry's journey, roles, and goals. Get insights into his skills, passions, and service to the community and church.">
@@ -16,24 +16,32 @@
                 <a href="#">Home</a>
                 <a href="wwr/">Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
-             </nav>
-        </header>
+                <a href="https://www.linkedin.com/in/terry-bello-57b8a2a4" target="_blank">LinkedIn</a>
+                <a href="https://www.facebook.com/terry.bello/" target="_blank">Facebook</a>
+            </nav>
+        </header>      
         <main>
             <h1>Terry Bello | WDD 130</h1>
-            <img src="images/profile.jpg" alt="Helo, my name is Terry Bello" width="200">
-            <p>Hello! My name is Terry Bello and I am from Venezuela, but I lived in Ecuador for 7 years and now I have lived for two years in São Paulo Brazil. I am 39 years old, and I am a logistics and supply administrator. And now I want to change careers and develop myself in the world of technology 😎.</p>
-            <aside>
-                <h2>Sao Paulo</h2>
-                <img src="images/Brazil.jpg" alt="São Paulo State">
+            <img src="images/profile.jpg" alt="Hello, my name is Terry Bello" width="200" class="profile-img">
+            <p class="profile-description">Hello! My name is Terry Bello and I am from Venezuela, but I lived in Ecuador for 7 years and now I have lived for two years in São Paulo Brazil. I am 39 years old, and I am a logistics and supply administrator. And now I want to change careers and develop myself in the world of technology. I am a passionate professional in programming and cybersecurity. I bring experience in fraud prevention and enhancing customer satisfaction in digital advertising. Additionally, I have a background in warehouse management and logistics, excelling in operational efficiency. Fluent in English, Spanish, and Portuguese, I specialize in customer support, problem-solving, and time management. Let's connect to explore how my versatility and skills can contribute to your team.</p>
+            <aside class="box">
+                <h2 class="title-on-image">São Paulo</h2>
+                <img src="images/Brazil.jpg" alt="São Paulo State" style="width: 100%;"> <!-- Increase width to 100% -->
                 <p>
                     São Paulo is one of the 27 federative units in Brazil, situated in the Southeast Region. Boasting a population of 44 million, accounting for approximately 22% of the Brazilian population, it stands as the most populous state in Brazil and the most densely populated national subdivision across the American continent. São Paulo surpasses all other countries in South America in terms of inhabitants, except for Colombia. The population of São Paulo is renowned for its remarkable diversity.
-                    
+                                
                     The economic landscape of São Paulo is characterized by its robustness and diversity, hosting the largest industrial, scientific, and technological production in the country.
                 </p>
-            </aside>
+            </aside>          
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/brasil-sao-paulo-temple?lang=eng" target="_blank">São Paulo Brazil Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/quito-ecuador-temple?lang=eng" target="_blank">Quito Ecuador Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/barranquilla-colombia-temple?lang=eng" target="_blank">Barranquilla Colombia Temple</a></li>
+            </ul>
         </main>
         <footer>
             <p>©️2024 🪇 Terry Bello 🪇 São Paulo, Brazil</p>
         </footer>
+        <!-- Last modified: March 14, 2024 -->
     </body>
 </html>
