--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,7 +15,7 @@
             <h1>River Rush Rafting Company</h1>
         </div>
         <nav>
-            <ul class="navegation">
+            <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="trips.html">Trips</a></li>
@@ -46,7 +46,7 @@
             
             <p style="margin: 10px 10px;">As the company continues to evolve and expand its horizons, its mission remains steadfast: to empower individuals, families, and communities to embrace the great outdoors, conquer their fears, and discover the boundless joys that await amidst the rush of the river.</p>
         </section>
-        <h2 style="text-align: center;"></h2style>Adventure Awaits You!</h2>
+        <h2 style="text-align: center;">Adventure Awaits You!</h2>
         <section class="adventures">
             <div class="Image-container">
                 <img src="images/Adventure_Awaits_You_01.jpg" alt="Adventure">
@@ -71,10 +71,10 @@
             
         </section>
     </main>
-<footer>
-    <p>&copy; 2024 River Rush Rafting Company - Terry Bello</p>
-    <a href="#"><img src="images/1_Facebook_colored_svg_copy-64.webp" alt="Facebook"></a>
-    <a href="#"><img src="images/2018_social_media_popular_app_logo_twitter-64.webp" alt="Twitter"></a>
-    <a href="#"><img src="images/instagram_icon-instagram_buttoninstegram-64.webp" alt="Instagram"></a>
-</footer>  
+    <footer>
+        <p>&copy; 2024 River Rush Rafting Company - Terry Bello</p>
+        <a href="#"><img src="images/1_Facebook_colored_svg_copy-64.webp" alt="Facebook"></a>
+        <a href="#"><img src="images/2018_social_media_popular_app_logo_twitter-64.webp" alt="Twitter"></a>
+        <a href="#"><img src="images/instagram_icon-instagram_buttoninstegram-64.webp" alt="Instagram"></a>
+    </footer>  
 </html>
