W05 Rafting Project: Contact Us Page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover the excitement of extreme sports with River Rush Rafting Company. Join us for thrilling rafting adventures amidst stunning landscapes and picturesque waterways. Established in 2006, our mission is to empower individuals, families, and communities to embrace the great outdoors and discover the boundless joys of outdoor escapades. Experience adrenaline-pumping rafting trips and forge unforgettable memories with River Rush Rafting Company.">
+    <meta name="author" content="Terry Bello">
     <title>About Us - River Rush Rafting Company</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
