--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -35,7 +35,7 @@
             </ul>
             <div class="map">
                 <!-- Google Maps Embed -->
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3688.0806565935395!2d-47.0377513497816!3d-23.94500028449401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cee254505655b5%3A0x4c2070227b76dc3!2sEstr.%20S%C3%A3o%20Benedito%2C%201600%20-%20Dos%20Carmos%2C%20Juquitiba%20-%20SP%2C%2006950-000!5e0!3m2!1sen!2sbr!4v1647349007155!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe id="google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3688.0806565935395!2d-47.0377513497816!3d-23.94500028449401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cee254505655b5%3A0x4c2070227b76dc3!2sEstr.%20S%C3%A3o%20Benedito%2C%201600%20-%20Dos%20Carmos%2C%20Juquitiba%20-%20SP%2C%2006950-000!5e0!3m2!1sen!2sbr!4v1647349007155!5m2!1sen!2sbr" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="form-container">
                 <h4>Send us a message</h4> <!-- Title for the form -->
@@ -60,7 +60,7 @@
                     <input type="checkbox" id="newsletter" name="newsletter">
                     <label for="newsletter">Please subscribe me to the monthly newsletter</label><br>
 
-                    <input type="submit" value="Submit">
+                    <button type="submit">Send Message</button>
                 </form>
             </div>
         </section>
