--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -33,9 +33,9 @@
         <p>The color palette for the rafting website is inspired by nature and adventure, reflecting the excitement of rafting experiences. The selected colors are:</p>
         <ul>
             <li>Primary Color: #FE5F55</li>
-            <li>Secondary Color: #F0B67F</li>
-            <li>Accent1 Color: #D6D1B1</li>
-            <li>Accent2 Color: #C7EFCF</li>
+            <li>Secondary Color: #2E8B57</li>
+            <li>Accent1 Color: #87CEEB</li>
+            <li>Accent2 Color: #8B4513</li>
         </ul>
         <p>You can view and modify the color palette on <a href="https://coolors.co/fe5f55-f0b67f-d6d1b1-c7efcf-eef5db" target="_blank">Coolors.co</a>.</p>
         <h3>Typography</h3>
@@ -46,17 +46,18 @@
         </ul>
         <p>You can use the Google Fonts API to import these fonts into your CSS file.</p>
         <h3>Navigation</h3>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">About Us</a>
-            <a href="#">Trips</a>
-            <a href="#">Contact Us</a>
-        </nav>
+    <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About Us</a>
+    <a href="trips.html">Trips</a>
+    <a href="contact.html">Contact Us</a>
+    </nav>
         <h2>Wireframes</h2>
         <h3>Home Page Wireframe</h3>
-        <img src="https://byui-cse.github.oi/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Home Page Wireframe Example Design" width="700">
+        <img src= "images/wireframe_home_page.png" alt="Home Page Wireframe Example Design" width="700">
+
         <h3>About Us Page Wireframe</h3>
-        <img src="https://byui-cse.github.oi/wdd130-ww-course/images/wwr-wireframe-abouus-update.png" alt="About Us Page Wireframe Design" width="700">
+        <img src="images/wireframe_trips_page.png" alt="About Us Page Wireframe Design" width="700">
     </main>
     <footer>
         <p>©️2024 🪇 Rafting Site Document 😎 Terry Bello 🪇 WDD 130</p> 
